css/products.css
@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;700&display=swap");

.navbar {
  background-color: #cf926f8c;
  box-shadow: 0px 1px 20px #eaeaea;
  display: inline-block;
  font-weight: 400;
}

.logo .nav-item {
  font-family: "Dancing Script", cursive;
  font-size: 30px;
  color: #db322a;
  margin-left: 15px;
}

body {
  background-color: white;
}

/* product page */

.title {
  padding-top: 120px;
  font-family: "Quicksand", sans-serif;
  color: #db322a;
  border-bottom: 5px solid #db322a;
  padding-bottom: 10px;
}

.small-container {
  max-width: 1080px;
  margin: auto;
  padding-left: 25px;
  padding-right: 25px;
}

.col-4 {
  flex-basis: 25%;
  padding: 10px;
  min-width: 200px;
  margin-bottom: 50px;
  font-family: "Quicksand", sans-serif;
}

.col-4 img {
  padding-top: 50px;
  width: 100%;
}

.col-4 h4 {
  padding-top: 10px;
  font-size: 15px;
}

.col-4 p {
  font-size: 15px;
}

.col-4 img:hover {
  transition: transform 750ms cubic-bezier(0.5, 0, 0.5, 1), opacity 250ms linear;
  transform: scale(1.1);
  opacity: 0.5;
}

.col-4 .shop-item-button {
  color: #fff;
  border: none;
  padding-left: 5px;
  margin-top: 10px;
  font-weight: 500;
  cursor: pointer;
  background: #db322a;
  transition: all 0.3s ease;
  border-radius: 8px 8px 8px 8px;
  font-size: 15px;
}

.col-4 .shop-item-button:active {
  transform: scale(0.95);
  opacity: 1;
}

/* Cart */

.section-header {
  padding-top: 120px;
  font-family: "Quicksand", sans-serif;
  color: #db322a;
  border-bottom: 5px solid #db322a;
  padding-bottom: 10px;
}

.cart-header {
  padding-top: 40px;
  font-weight: bold;
  font-size: 1.25em;
  color: #333;
}

.cart-column {
  display: flex;
  align-items: center;
  border-bottom: 1px solid black;
  margin-right: 1.5em;
  padding-bottom: 10px;
  margin-top: 10px;
}

.cart-row {
  display: flex;
}

.cart-item {
  width: 45%;
}

.cart-price {
  width: 20%;
  font-size: 1.2em;
  color: #333;
}

.cart-quantity {
  width: 35%;
}

.cart-item-title {
  color: #333;
  margin-left: 0.5em;
  font-size: 1.2em;
}

.cart-item-image {
  width: 75px;
  height: auto;
  border-radius: 10px;
}

.btn-danger {
  color: white;
  background-color: #db322a;
  border: none;
  border-radius: 0.3em;
  font-weight: bold;
}

.btn-danger:hover {
  background-color: #eb5757;
}

.cart-quantity-input {
  height: 34px;
  width: 50px;
  border-radius: 5px;
  border: none;
  background-color: #eee;
  color: #333;
  padding: 0;
  text-align: center;
  font-size: 1.2em;
  margin-right: 25px;
}

.cart-row:last-child {
  border-bottom: 1px solid black;
}

.cart-row:last-child .cart-column {
  border: none;
}

.cart-total {
  text-align: end;
  margin-top: 10px;
  margin-right: 10px;
}

.cart-total-title {
  font-weight: bold;
  font-size: 1.5em;
  color: black;
  margin-right: 20px;
}

.cart-total-price {
  color: #333;
  font-size: 1.1em;
}

.btn-purchase {
  display: block;
  margin: 40px auto 80px auto;
  font-size: 1.75em;
  background-color: #db322a;
  border: none;
}

.btn-purchase:hover {
  background-color: #eb5757;
}

/* footer */

.footer {
  margin-top: 600px;
}

.container {
  max-width: 1170px;
  margin: auto;
}

.row {
  display: flex;
  flex-wrap: wrap;
}

ul {
  list-style: none;
}

.footer {
  background-color: #db322a;
  padding: 70px 0;
}

.footer-col {
  width: 25%;
  padding: 0 15px;
}

.footer-col h4 {
  font-size: 18px;
  color: white;
  text-transform: capitalize;
  margin-bottom: 35px;
  font-weight: 300;
  position: relative;
}

.footer-col h4:before {
  content: "";
  position: absolute;
  left: 0;
  bottom: -10px;
  background-color: aliceblue;
  height: 2px;
  box-sizing: border-box;
  width: 60px;
}

.footer-col ul li {
  margin-bottom: 10px;
}

.footer-col ul li a {
  font-size: 16px;
  text-transform: capitalize;
  color: #ffffff;
  text-decoration: none;
  font-weight: 300;
  display: block;
  transition: 0.3s;
}

.footer-col ul li a:hover {
  color: #ffffff;
  opacity: 0.6;
}

.footer-col .social-links a {
  display: inline-block;
  height: 40px;
  width: 40px;
  background-color: darkgray;
  margin: 0 10px 10px 0;
  text-align: center;
  line-height: 40px;
  border-radius: 50%;
  color: white;
  transition: 0.3s;
}
.footer-col .social-links a:hover {
  color: #24262b;
  background-color: #ffffff;
}

.footer-form {
  padding-bottom: 15px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  border-bottom: 1px solid white;
  margin-bottom: 50px;
}

.footer-form .far {
  font-size: 18px;
  margin-right: 10px;
  color: white;
}

.footer-form input {
  width: 100%;
  background: transparent;
  color: white;
  border: 0;
  outline: none;
}

.footer-form button {
  background: transparent;
  border: 0;
  outline: none;
  cursor: pointer;
}

.footer-form button .fas {
  font-size: 16px;
  color: white;
}

